Añadidos tests de controlador TG-1